fixed deprecated use of clazz.newInstance()